--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
-EXE=tma_dfa
+EXE=dfa
 
 main:
-	g++ -std=c++11 -Wall -fopenmp -O3 -march=native -o $(EXE) tma_dfa.cpp
+	g++ -std=c++11 -Wall -fopenmp -O3 -march=native -o $(EXE) dfa.cpp
 	cp $(EXE) ../
 
 clean:
