WIP: adding AES-NI files + bruteforce over keys

--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,11 @@
-EXE=dfa
+all: dfa
 
-main:
-	g++ -std=c++11 -Wall -fopenmp -O3 -march=native -o $(EXE) dfa.cpp
-	cp $(EXE) ../
+dfa:
+	g++ -std=c++11 -Wall -fopenmp -O3 -march=native -o dfa dfa.cpp -g -msse2 -msse -maes aes.c
+	cp dfa ../
 
 clean:
-	rm -f $(EXE)
-	rm -f ../$(EXE)
+	rm -f dfa
+	rm -f ../dfa
+	rm -f *.o *~
 
